--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+small {
+  color: grey;
+  font-size: 12px;
+  font-weight: 400;
+  margin-left: 6px;
+}
+
 .list-item {
   display: flex;
   justify-content: space-between;
@@ -6,4 +13,7 @@
   border-radius: 0.375rem;
   margin-bottom: 1rem;
   padding: 3px 7px;
+}
+.edit-mode {
+  color: #ccc;
 }
